// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Snapshots renders checked switch correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="true"
      checked=""
      class="sr-only"
      id="switch-5l5jktj"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-primary-600 dark:bg-primary-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              translate-x-5 undefined
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders default switch correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-dv330di"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders disabled switch correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      disabled=""
      id="switch-mknsfqq"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          opacity-50 cursor-not-allowed
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with Android style correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-w80moza"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white shadow-md
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with Material style correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-vi7pk56"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-400 dark:bg-gray-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white shadow-md
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with custom on/off text correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-jhmlf51"
      offtext="NO"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with custom thumb component correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-898iyuu"
      role="switch"
      thumbcomponent="[object Object]"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with custom track component correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-85eht1b"
      role="switch"
      trackcomponent="[object Object]"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different color schemes correctly: Switch with color scheme danger 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="true"
      checked=""
      class="sr-only"
      id="switch-stqek63"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-red-600 dark:bg-red-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              translate-x-5 undefined
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different color schemes correctly: Switch with color scheme info 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="true"
      checked=""
      class="sr-only"
      id="switch-d1qwufh"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-blue-600 dark:bg-blue-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              translate-x-5 undefined
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different color schemes correctly: Switch with color scheme neutral 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="true"
      checked=""
      class="sr-only"
      id="switch-xqdyxjd"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-600 dark:bg-gray-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              translate-x-5 undefined
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different color schemes correctly: Switch with color scheme primary 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="true"
      checked=""
      class="sr-only"
      id="switch-jjaeo69"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-primary-600 dark:bg-primary-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              translate-x-5 undefined
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different color schemes correctly: Switch with color scheme secondary 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="true"
      checked=""
      class="sr-only"
      id="switch-ujwre55"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-secondary-600 dark:bg-secondary-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              translate-x-5 undefined
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different color schemes correctly: Switch with color scheme success 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="true"
      checked=""
      class="sr-only"
      id="switch-gf0scds"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-green-600 dark:bg-green-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              translate-x-5 undefined
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different color schemes correctly: Switch with color scheme warning 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="true"
      checked=""
      class="sr-only"
      id="switch-kkeowp9"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-yellow-600 dark:bg-yellow-500
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              translate-x-5 undefined
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different label alignments correctly: Switch with label alignment center 1`] = `
<DocumentFragment>
  <div
    class="
        inline-flex
        flex-row-reverse
        items-center
        gap-2
        
        
      "
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-s3n1lvn"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      >
        <label
          class="
            text-sm
            text-gray-700 dark:text-gray-300
            cursor-pointer
            
          "
          for="switch-s3n1lvn"
        >
          Aligned Label
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different label alignments correctly: Switch with label alignment end 1`] = `
<DocumentFragment>
  <div
    class="
        inline-flex
        flex-row-reverse
        items-end
        gap-2
        
        
      "
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-tn9wwfh"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      >
        <label
          class="
            text-sm
            text-gray-700 dark:text-gray-300
            cursor-pointer
            
          "
          for="switch-tn9wwfh"
        >
          Aligned Label
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different label alignments correctly: Switch with label alignment start 1`] = `
<DocumentFragment>
  <div
    class="
        inline-flex
        flex-row-reverse
        items-start
        gap-2
        
        
      "
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-8t6b0j5"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      >
        <label
          class="
            text-sm
            text-gray-700 dark:text-gray-300
            cursor-pointer
            
          "
          for="switch-8t6b0j5"
        >
          Aligned Label
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different sizes correctly: Switch with size lg 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-i089cnj"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-12 h-6
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-5 h-5
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different sizes correctly: Switch with size md 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-he2uekh"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different sizes correctly: Switch with size sm 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-xlzuv6r"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-8 h-4
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-3 h-3
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different sizes correctly: Switch with size xl 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-az554sy"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-14 h-7
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-6 h-6
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different sizes correctly: Switch with size xs 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-nquge1i"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-6 h-3
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-2 h-2
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different variants correctly: Switch with variant filled 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-dyeasw8"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-200 dark:bg-gray-700
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-gray-500 dark:bg-gray-400
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different variants correctly: Switch with variant minimal 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-iea4xti"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-200 dark:bg-gray-800 border border-gray-300 dark:border-gray-700
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-gray-400 dark:bg-gray-600
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different variants correctly: Switch with variant outline 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-ou48orm"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-transparent border-2 border-gray-300 dark:border-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-gray-500 dark:bg-gray-400
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with different variants correctly: Switch with variant solid 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-yxbfwza"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with error message correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      aria-errormessage="switch-njg91oa-error"
      aria-invalid="true"
      class="sr-only"
      id="switch-njg91oa"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
      <div
        class="absolute inset-y-0 right-0 flex items-center pr-2"
      >
        <span
          aria-hidden="true"
          class="text-red-500"
        >
          ✕
        </span>
      </div>
    </div>
    <div
      class="mt-1 text-sm"
    >
      <p
        class="text-red-600 dark:text-red-400 "
        id="switch-njg91oa-error"
        role="alert"
      >
        This is an error message
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with helper text correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      aria-describedby="switch-2yikr3c-helper"
      class="sr-only"
      id="switch-2yikr3c"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
    <div
      class="mt-1 text-sm"
    >
      <p
        class="text-gray-500 dark:text-gray-400 "
        id="switch-2yikr3c-helper"
      >
        This is a helper text
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with iOS style correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-8tc3gzz"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-200 dark:bg-gray-700
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white shadow-md
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with icons correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-t8ish01"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with label correctly 1`] = `
<DocumentFragment>
  <div
    class="
        inline-flex
        flex-row
        items-start
        gap-2
        
        
      "
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-6wk7ggd"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      >
        <label
          class="
            text-sm
            text-gray-700 dark:text-gray-300
            cursor-pointer
            
          "
          for="switch-6wk7ggd"
        >
          Toggle me
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with label on the left correctly 1`] = `
<DocumentFragment>
  <div
    class="
        inline-flex
        flex-row-reverse
        items-start
        gap-2
        
        
      "
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-dnx05dj"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      >
        <label
          class="
            text-sm
            text-gray-700 dark:text-gray-300
            cursor-pointer
            
          "
          for="switch-dnx05dj"
        >
          Left Label
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with label on the right correctly 1`] = `
<DocumentFragment>
  <div
    class="
        inline-flex
        flex-row
        items-start
        gap-2
        
        
      "
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-o5qvzn8"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
    <div
      class=""
    >
      <div
        class=""
      >
        <label
          class="
            text-sm
            text-gray-700 dark:text-gray-300
            cursor-pointer
            
          "
          for="switch-o5qvzn8"
        >
          Right Label
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with loading state correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-o2uku1d"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
      <div
        class="absolute inset-y-0 right-0 flex items-center pr-2"
      >
        <span
          aria-hidden="true"
          class="text-primary-500 animate-spin"
        >
          ⟳
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with on/off text correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      class="sr-only"
      id="switch-zr2mbtd"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch Snapshots renders switch with success message correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <input
      aria-checked="false"
      aria-describedby="switch-87uy681-success"
      class="sr-only"
      id="switch-87uy681"
      role="switch"
      type="checkbox"
    />
    <div
      class="
          relative inline-flex items-center 
          cursor-pointer
          
        "
    >
      <div
        class="
            w-10 h-5
            rounded-full
            transition-colors duration-200 ease-in-out
            bg-gray-300 dark:bg-gray-600
            
            
            
          "
      >
        <div
          class="
              w-4 h-4
              absolute top-0.5 left-0.5
              rounded-full
              
              transform transition-transform duration-200 ease-in-out
              bg-white
              flex items-center justify-center
              
            "
        />
      </div>
    </div>
    <div
      class="mt-1 text-sm"
    >
      <p
        class="text-green-600 dark:text-green-400 "
        id="switch-87uy681-success"
      >
        This is a success message
      </p>
    </div>
  </div>
</DocumentFragment>
`;
